# machine-payments

./: .cli.json  .env.template  .gitignore  AGENTS.md  CONTRIBUTING.md  FLOVIA_SDK_INTEGRATION.md  MPPPayments.md  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: ci.yaml
docs/: HitPayMPP.md  MPP-vs-HitPayMPP.md  MPPPayments.md
docs/issues/: mpp-typescript-decimals-runtime-error.md
docs/worklogs/: 2026-05-07-mpp-crypto-headless-flow.md
hitpaympp/server/node-typescript/: Makefile  README.md  client.ts  main.test.ts  main.ts  package.json  pnpm-lock.yaml  tsconfig.json
mpp/server/node-typescript/: Makefile  README.md  biome.json  client.ts  main.test.ts  main.ts  package.json  pnpm-lock.yaml  simulate-crypto-deposit.ts  tsconfig.json  wallet.ts
mpp/server/python/: Makefile  README.md  main.py  pyproject.toml  test_main.py
x402/server/node-typescript/: README.md  main.test.ts  main.ts  package.json  pnpm-lock.yaml  tsconfig.json
x402/server/python/: README.md  main.py  pyproject.toml  test_main.py
